# stellar-playground

./: .env.example  .gitignore  LICENSE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
ISSUE_TEMPLATE/: bug_report.md  feature_request.md
public/: robots.txt  sitemap.xml
src/: App.tsx  index.css
src/components/: Editor.tsx  ProjectList.tsx  ShareProjectDialog.tsx  UserNav.tsx
src/components/abi/: ABIContractSelector.tsx  ABIExecuteDialog.tsx  ABIExecutionHistory.tsx  ABIHeader.tsx  ABIMethodCard.tsx  ABIMethodSignature.tsx
src/components/editor/: DeployDialog.tsx  EditorHeader.tsx
src/components/landing/: DocsSection.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  SignInDialog.tsx  UsersSection.tsx  WelcomeDialog.tsx
src/components/projects/: NewProjectDialog.tsx  ProjectHeader.tsx  ProjectList.tsx  TemplateList.tsx  TemplateListRow.tsx
src/components/seo/: SEO.tsx
src/lib/: analytics.ts  ansi.ts  api.ts  auth.ts  contract.ts  editor.ts  shareLinks.ts  soroban-templates.ts  stellar-config.ts  stellar-wallet.ts  stellarContract.ts  supabase.ts  templates.ts  types.ts  utils.ts
src/pages/: EditorPage.tsx  LandingPage.tsx  ProjectsPage.tsx  SharedProjectPage.tsx
stellar-backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  deploy.sh  docker-compose.yml
stellar-backend/base_project/contracts/hello-world/src/: lib.rs
stellar-backend/src/: handlers.rs  main.rs  models.rs  utils.rs
stellar-backend/src/services/: compilation.rs  deployment.rs  invocation.rs  mod.rs
(+14 files in other folders)
