[package]
name = "stellar-playground-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
tempfile = "3.0"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
stellar-strkey = "0.0.8"
hex = "0.4"
ed25519-dalek = "2.0"
rand = "0.8"

[dev-dependencies]
actix-rt = "2.9"
